--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -13,12 +13,24 @@
     <li><a href= "./home_page.html" id="home">Home</a></li>
     <li><a href= "./about_us.html" id="aboutUs">About</a></li>
     <li><a href= "./contact_us.html" id="contactUs">Contact us</a></li>
-    <li><input type="text" id="searchBar">Enter a destination or keyword</input></li>
-    <li><button id="searchBtn">Search</button></li>
-    <li><button id="clearBtn">Clear</button></li>
     </ul>
+    <form class="searching">
+        <input type="text" id="searchBar" placeholder="Enter a destination or keyword"><img src="./search.png">
+        <button id="searchBtn">Search</button>
+        <button id="clearBtn">Clear</button>
+    </form>
 </nav>
 
+<body>
+    <h1>EXPLORE YOUR DREAM DESTINATION<h1>
 
-    </html>
+    <p>We encourage you to explore your dream destination, let it be any unfamiliar territory, a place with a diverse culture, a bustling metropole or a calm landscape place captivating your heart and  fulfilling your desires about your dreamed holiday</p>
+
+    <button id="bookNowBtn">BOOK NOW</button>
+
+
+</body>
+
+
+</html>
 
