css file edited

--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -10,19 +10,21 @@
 <nav>
     <ul>
     <li><p>The Best Travel Recommendations</p></li>
-    <li><a href= "./home_page.html" id="home">Home</a></li>
-    <li><a href= "./about_us.html" id="aboutUs">About</a></li>
-    <li><a href= "./contact_us.html" id="contactUs">Contact us</a></li>
+    <div id="menuItems">
+        <li><a href= "./home_page.html" id="home">Home</a></li>
+        <li><a href= "./about_us.html" id="aboutUs">About</a></li>
+        <li><a href= "./contact_us.html" id="contactUs">Contact Us</a></li>
+    </div>
     </ul>
-    <form class="searching">
-        <input type="text" id="searchBar" placeholder="Enter a destination or keyword"><img src="./search.png">
+    <form class="searchSec">
+        <input type="text" id="searchBar" placeholder="Enter a destination or keyword"><img src="./search.png" id="searchIcon">
         <button id="searchBtn">Search</button>
         <button id="clearBtn">Clear</button>
     </form>
 </nav>
 
 <body>
-    <h1>EXPLORE YOUR DREAM DESTINATION<h1>
+    <h1>EXPLORE YOUR DREAM DESTINATION</h1>
 
     <p>We encourage you to explore your dream destination, let it be any unfamiliar territory, a place with a diverse culture, a bustling metropole or a calm landscape place captivating your heart and  fulfilling your desires about your dreamed holiday</p>
 
