--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -17,7 +17,8 @@
     </div>
     </ul>
     <form class="searchSec">
-        <input type="text" id="searchBar" placeholder="Enter a destination or keyword"><img src="./search.png" id="searchIcon">
+        <input type="text" id="searchBar" placeholder="Enter a destination or keyword">
+        <img src="./search.png">
         <button id="searchBtn">Search</button>
         <button id="clearBtn">Clear</button>
     </form>
