about us file updatd

--- a/about_us.html
+++ b/about_us.html
@@ -29,27 +29,21 @@
         <div class="teamHeader">
         <h3>OUR TEAM</h3>
         </div>
-            <div block="teamMembers">
+            <div class="teamMembers">
                 <div class="person">
-                    <div class="personInfo">
                         <h4>Martin May</h4>
                         </p class="responsibility">Martin bears the main responsibility for our outstanding performance delivered to you</p>
                     <button class="position">CEO</button>
-                    </div>
                 </div>
                 <div class="person">
-                    <div class="personInfo">
                         <h4>Michelle July</h4>
                         </p class="responsibility">Michelle takes care for the continous development of our team</p>
                     <button class="position">Team Lead</button>
-                    </div>
                 </div>
                 <div class="person">
-                    <div class="personInfo">
                         <h4>Louise Marche</h4>
                         </p class="responsibility">Louise is responsible for bringing you closer to the hidden gems</p>
                     <button class="position">Business Developer</button>
-                    </div>
                 </div>
             </div>
     </div>
