aboutUs finally edited

--- a/about_us.html
+++ b/about_us.html
@@ -21,18 +21,27 @@
 
       <h1>ABOUT US</h1>
 
-    <p>Some interesting text about the imaginable company ooooyeeeeaaaa</p>
+    <p>Let us introduce you our great team of dedicated professionals who endeavour to provide you the most outstanding services in the travel business on a daily basis
+     Together we ensure you can enjoy your travel withou any compromises.
+    </p>
 
 
 <!-- TODO: OUR TEAM -> make up some divs/forms -->
-    <div class="container" >
-        <div class="teamHeader">
+    
+<div class="container" >
+    <!-- <div class="teamHeader">
         <h3>OUR TEAM</h3>
-        </div>
+        </div> --> 
             <div class="teamMembers">
-                <div class="person">
+                <!-- <div class=person">
+                    <h3>OUR TEAM</h3>
+                <div class="person"> -->
+                   <div class="heading">
+                        <h3>OUR TEAM</h3>
+                    </div>
+                    <div class="person">
                         <h4>Martin May</h4>
-                        </p class="responsibility">Martin bears the main responsibility for our outstanding performance delivered to you</p>
+                        </p class="responsibility">Martin bears responsibility for our outstanding performance</p>
                     <button class="position">CEO</button>
                 </div>
                 <div class="person">
@@ -42,11 +51,13 @@
                 </div>
                 <div class="person">
                         <h4>Louise Marche</h4>
-                        </p class="responsibility">Louise is responsible for bringing you closer to the hidden gems</p>
+                        </p class="responsibility">Louise is responsible for bringing you closer to the hidden gems worldwide</p>
                     <button class="position">Business Developer</button>
                 </div>
             </div>
     </div>
+
+</div>
 
 </body>
 
