contactsUs page edited

--- a/contact_us.html
+++ b/contact_us.html
@@ -3,7 +3,7 @@
 
 <head>
         <title>Contact us</title>
-    <link rel ="stylesheet" href="./travel_recommendation.css"</link>
+    <link rel ="stylesheet" href="./contact_us.css"</link>
 </head>
 
 <nav>
@@ -29,9 +29,10 @@
     <label for="email">Email</label><br>
     <input type="text" id="email" placeholder="Enter your email please">
     <label for="message">Message</label><br>
-    <textarea id="message" placeholder="Enter your message please" rows="7" cols="30">
-    <button id="Submit">Submit</button>
+    <textarea id="message" placeholder="Enter your message please" rows="7" cols="30"></textarea>
 </form>
+
+<button id="Submit">Submit</button>
 
 </body>
 
