--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -29,6 +29,10 @@
 
     <p>We encourage you to explore your dream destination, let it be any unfamiliar territory, a place with a diverse culture, a bustling metropole or a calm landscape place captivating your heart and  fulfilling your desires about your dreamed holiday</p>
 
+    <div id="searchCondition">
+        <div id="result"></div>
+    </div>
+
     <button id="bookNowBtn">BOOK NOW</button>
 
 
