minor changes again

--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -30,7 +30,8 @@
     <p>We encourage you to explore your dream destination, let it be any unfamiliar territory, a place with a diverse culture, a bustling metropole or a calm landscape place captivating your heart and  fulfilling your desires about your dreamed holiday</p>
 
     <div id="searchCondition">
-        <div id="result"></div>
+        <div id="result1"></div>
+        <div id="result2"></div>
     </div>
 
     <button id="bookNowBtn">BOOK NOW</button>
