--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -19,7 +19,7 @@
     <form class="searchSec">
         <input type="text" id="searchBar" placeholder="Enter a destination or keyword">
         <img src="./search.png">
-        <button id="searchBtn">Search</button>
+        <button id="searchBtn" type="submit">Search</button>
         <button id="clearBtn">Clear</button>
     </form>
 </nav>
@@ -30,13 +30,12 @@
     <p>We encourage you to explore your dream destination, let it be any unfamiliar territory, a place with a diverse culture, a bustling metropole or a calm landscape place captivating your heart and  fulfilling your desires about your dreamed holiday</p>
 
     <div id="searchCondition">
-        <div id="result1"></div>
-        <div id="result2"></div>
+       
     </div>
 
     <button id="bookNowBtn">BOOK NOW</button>
 
-    <script src="./travel_recommendation.js"></script>  
+    <script src="./travel_rec.js"></script>  
 
 </body>
 
