--- a/contact_us.html
+++ b/contact_us.html
@@ -10,7 +10,7 @@
     <ul>
     <li><p>The Best Travel Recommendations</p></li>
     <div id="menuItems">
-        <li><a href= "./home_page.html" id="home">Home</a></li>
+        <li><a href= "./travel_recommendation.html" id="home">Home</a></li>
         <li><a href= "./about_us.html" id="aboutUs">About</a></li>
         <li><a href= "./contact_us.html" id="contactUs">Contact Us</a></li>
     </div>
@@ -21,8 +21,9 @@
 
       <h1>CONTACT US</h1>
 
-      <p>Get in touch</p>
+      <p class="getIn" >Get in touch</p>
 
+<div id=formAndButton>
 <form id=contactForm>
     <label for="name">Name</label><br>
     <input type ="text" id="name" placeholder="Enter your name please">
@@ -33,6 +34,7 @@
 </form>
 
 <button id="Submit">Submit</button>
+</div>
 
 </body>
 
